Kubernetes/Day-43/network-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-server
  labels:
    app: network-server
spec:
  containers:
    - name: server
      image: nginx:1.27
---
apiVersion: v1
kind: Pod
metadata:
  name: network-client
  labels:
    app: network-client
spec:
  containers:
    - name: client
      image: busybox:1.36
      command:
        - sh
        - -c
        - "sleep 3600"
