Kubernetes/Day-43/network-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: network-server
spec:
  selector:
    app: network-server
  ports:
    - port: 80
      targetPort: 80
