Kubernetes/Day-43/deny-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-network-server-ingress
spec:
  podSelector:
    matchLabels:
      app: network-server
  policyTypes:
    - Ingress
